--- a/app/assets/stylesheets/vin_decoder.css.scss
+++ b/app/assets/stylesheets/vin_decoder.css.scss
@@ -15,9 +15,6 @@
 		input {
 			width: 50%;
 		}
-		[type="submit"] {
-    	font-size: 1.5em;
-  	}
 	}
 }
 
